--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
           <!--   <%= link_to("新規投稿", "/posts/new") %> -->
           <!-- </li> -->
           <li>
-            <%= link_to("ユーザー一覧", "/users/index") %>
+            <%= link_to("ユーザー一覧", "/users") %>
           </li>
           <li>
             <%= link_to("ログアウト", "/logout", {method: :post}) %>
