--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,31 +1,18 @@
-<h1>Posts</h1>
+<div calss="main posts-index">
+  <div class="container">
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th>Code</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
     <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.content %></td>
-        <td><%= post.code %></td>
-        <td><%= post.user_id %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <div class="posts-index-item">
+      <div class="post-left">
+      </div>
+      <div class="post-right">
+        <%= link_to post.title, post %>
+        <div class="post-footer">
+          <%= post.updated_at %>
+        </div>
+      </div>
+    </div>
     <% end %>
-  </tbody>
-</table>
 
-<br>
-
-<%= link_to 'New Post', new_post_path %>
+  </div>
+</div>
