--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,105 @@
  *= require_tree .
  *= require_self
  */
+
+/* reset ================================ */
+* {
+    box-sizing: border-box;
+}
+
+html {
+    font: 100%/1.5 'Avenir Next', 'Hiragino Sans', sans-serif;
+}
+
+ul, li {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: gray;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+}
+
+/* input { */
+/*   background-color: transparent; */
+/*   outline-width: 0; */
+/* } */
+
+/* form input[type="submit"] { */
+/*   border: none; */
+/*   cursor: pointer; */
+/* } */
+
+/* /\* 共通レイアウト ================================ *\/ */
+body {
+    color: #2d3133;
+    background-color: #ffffcc;
+    margin: 0;
+    min-height: 1vh;
+}
+
+.main {
+    /* position: absolute; */
+    /* z-index: 10; */
+    top: 100px;
+    width: 100%;
+    height: auto%;
+    min-height: 100%;
+}
+
+.container {
+    max-width: 60%;
+    margin: 30px auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    clear: both;
+    background-color: #f5f8fa;
+}
+
+/* ヘッダー  */
+header {
+    height: 100px;
+    width: 100%;
+    background-color: #66cc99;
+}
+
+.header-logo {
+    float: left;
+    padding-left: 30%;
+    color: white;
+    font-size: 22px;
+    line-height: 100px;
+}
+
+.header-menus {
+    float: right;
+    padding-right: 20%;
+}
+
+.header-menus li {
+    float: left;
+    line-height: 100px;
+    font-size: 14px;
+    color: white;
+    padding-left: 15px;
+}
+
+/* フラッシュ */
+.flash {
+    padding: 10px 0;
+    color: white;
+    background: rgb(251, 170, 88);
+    text-align: center;
+    position: absolute;
+    top: 64px;
+    z-index: 10;
+    width: 100%;
+    border-radius: 0 0 2px 2px;
+    font-size: 14px;
+}
