--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,37 +11,38 @@
 
   <body>
     <header>
-      <!-- <div class="header-logo"> -->
-      <!--   <% if @current_user %> -->
-      <!--     <%= link_to("TweetApp", "/posts/index") %> -->
-      <!--   <% else %> -->
-      <!--     <%= link_to("TweetApp", "/") %> -->
-      <!--   <% end %> -->
-      <!-- </div> -->
+      <div class="header-logo">
+        <% if @current_user %>
+          <%= link_to("Algorithms", "/posts") %>
+        <% else %>
+          <%= link_to("Algorithms", "/") %>
+        <% end %>
+      </div>
       <ul class="header-menus">
         <% if @current_user %>
-          <li>
-            <%= link_to(@current_user.name, "/users/#{@current_user.id}") %>
-          </li>
-          <!-- <li> -->
-          <!--   <%= link_to("投稿一覧", "/posts/index") %> -->
-          <!-- </li> -->
-          <!-- <li> -->
-          <!--   <%= link_to("新規投稿", "/posts/new") %> -->
-          <!-- </li> -->
-          <li>
-            <%= link_to("ユーザー一覧", "/users") %>
-          </li>
-          <li>
-            <%= link_to("ログアウト", "/logout", {method: :post}) %>
-          </li>
+        <li>
+          <% if @current_user.admin%>
+          <%= link_to(@current_user.name, "/users") %>
+          <% else %>
+          <%= link_to(@current_user.name, "/users/#{@current_user.id}") %>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to("投稿一覧", "/posts") %>
+        </li>
+        <li>
+          <%= link_to("新規投稿", "/posts/new") %>
+        </li>
+        <li>
+          <%= link_to("ログアウト", "/logout", {method: :post}) %>
+        </li>
         <% else %>
-          <li>
-            <%= link_to("新規登録", "/users/new") %>
-          </li>
-          <li>
-            <%= link_to("ログイン", "/login") %>
-          </li>
+        <li>
+          <%= link_to("新規登録", "/users/new") %>
+        </li>
+        <li>
+          <%= link_to("ログイン", "/login") %>
+        </li>
         <% end %>
       </ul>
     </header>
