--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,20 +1,27 @@
-編集
+<div calss="main posts-edit">
+  <div class="container">
 
-<% if @error_message %>
-<div class="form-error">
-  <%= @error_message %>
+    <h1 class="form-heading">編集</h1>
+
+    <% if @error_message %>
+    <div class="form-error">
+      <%= @error_message %>
+    </div>
+    <% end %>
+
+    <%= form_with(url: "/posts/#{@post.id}",method: :patch) do %>
+    <div class="form">
+      <div class="form-body">
+      <p>タイトル</p>
+      <input name="title" value="<%= @post.title %>">
+      <p>内容</p>
+      <textarea name="content"><%= @post.content %></textarea>
+      <p>コード</p>
+      <textarea name="code"><%= @post.code %></textarea>
+      <input type="submit" value="更新">
+      </div>
+    </div>
+    <% end %>
+
+  </div>
 </div>
-<% end %>
-
-<%= form_with(url: "/posts/#{@post.id}",method: :patch) do %>
-<p>タイトル</p>
-<input name="title" value="<%= @post.title %>">
-<p>内容</p>
-<input name="content" value="<%= @post.content %>">
-<p>コード</p>
-<input name="code" value="<%= @post.code %>">
-<input type="submit" value="更新">
-<% end %>
-
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
