--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,17 +1,28 @@
-新規投稿
+<div calss="main posts-new">
+  <div class="container">
 
-<% if @error_message %>
-<div class="form-error">
-  <%= @error_message %>
+    <h1>新規投稿</h1>
+
+    <% if @error_message %>
+    <div class="form-error">
+      <%= @error_message %>
+    </div>
+    <% end %>
+
+    <%= form_with(url: "/posts") do %>
+    <div class="form">
+      <div class="form-body">
+        <p>タイトル</p>
+        <input name="title" value="<%= @post.title %>">
+        <p>内容</p>
+        <textarea name="content" value="<%= @post.content %>"></textarea>
+        <p>コード</p>
+        <textarea name="code" value="<%= @post.code %>"></textarea>
+
+        <input type="submit" value="新規投稿">
+      </div>
+    </div>
+    <% end %>
+
+  </div>
 </div>
-<% end %>
-
-<%= form_with(url: "/posts") do %>
-<p>タイトル</p>
-<input name="title" value="<%= @post.title %>">
-<p>内容</p>
-<input name="content" value="<%= @post.content %>">
-<p>コード</p>
-<input name="code" value="<%= @post.code %>">
-<input type="submit" value="新規投稿">
-<% end %>
