--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,20 +1,34 @@
-編集
+<div calss="main users-edit">
+  <div class="container">
 
-<% if @error_message %>
-<div class="form-error">
-  <%= @error_message %>
+    <h1 class="form-heading">編集</h1>
+
+    <% if @error_message %>
+    <div class="form-error">
+      <%= @error_message %>
+    </div>
+    <% end %>
+
+    <%= form_with(url: "/users/#{@user.id}",method: :patch) do %>
+    <div class="form">
+      <div class="form-body">
+        <p>ユーザー名</p>
+        <input name="name" value="<%= @user.name %>">
+        <p>メールアドレス</p>
+        <input name="email" value="<%= @user.email %>">
+        <p>画像</p>
+        <input name="image" type="file">
+        <input type="submit" value="更新">
+        <% if @current_user.admin %>
+        <p>管理者権限</p>
+        <select name="admin">
+          <option value="false">ユーザ</option>
+          <option value="true">管理者</option>
+        </select>
+        <% end %>
+      </div>
+    </div>
+    <% end %>
+
+  </div>
 </div>
-<% end %>
-
-<%= form_with(url: "/users/#{@user.id}",method: :patch) do %>
-<p>ユーザー名</p>
-<input name="name" value="<%= @user.name %>">
-<p>メールアドレス</p>
-<input name="email" value="<%= @user.email %>">
-<p>画像</p>
-<input name="image" type="file">
-<input type="submit" value="更新">
-<% end %>
-
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
