--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -1,5 +1,6 @@
-<div class="main users-new">
+<div class="main users-login">
   <div class="container">
+
     <div class="form-heading">ログイン</div>
     <div class="form users-form">
       <div class="form-body">
