--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,17 +1,34 @@
-新規ユーザ
+<div calss="main posts-new">
+  <div class="container">
 
-<% if @error_message %>
-<div class="form-error">
-  <%= @error_message %>
+    <h1>新規ユーザ</h1>
+
+    <% if @error_message %>
+    <div class="form-error">
+      <%= @error_message %>
+    </div>
+    <% end %>
+
+    <%= form_with(url: "/users") do %>
+    <div class="form">
+      <div class="form-body">
+        <p>ユーザー名</p>
+        <input name="name" value="<%= @user.name %>">
+        <p>メールアドレス</p>
+        <input name="email" value="<%= @user.email %>">
+        <p>パスワード</p>
+        <input type="password" name="password" value="<%= @user.password %>">
+        <% if @current_user.admin %>
+        <p>管理者権限</p>
+        <select name="admin">
+          <option value="false">ユーザ</option>
+          <option value="true">管理者</option>
+        </select>
+        <% end %>
+        <input type="submit" value="新規登録">
+      </div>
+    </div>
+    <% end %>
+
+  </div>
 </div>
-<% end %>
-
-<%= form_with(url: "/users") do %>
-<p>ユーザー名</p>
-<input name="name" value="<%= @user.name %>">
-<p>メールアドレス</p>
-<input name="email" value="<%= @user.email %>">
-<p>パスワード</p>
-<input type="password" name="password" value="<%= @user.password %>">
-<input type="submit" value="新規登録">
-<% end %>
