--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -61,7 +61,7 @@ body {
     /* z-index: 10; */
     top: 100px;
     width: 100%;
-    height: auto%;
+    height: auto;
     min-height: 100%;
 }
 
