--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -16,6 +16,8 @@
         <input name="name" value="<%= @user.name %>">
         <p>メールアドレス</p>
         <input name="email" value="<%= @user.email %>">
+        <p>パスワード</p>
+        <input name="password" type="password" value="<%= @user.password %>">
         <p>画像</p>
         <input name="image" type="file">
         <input type="submit" value="更新">
