--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,7 @@
 <div calss="main posts-index">
   <div class="container">
 
+    <table class="table">
     <% @posts.each do |post| %>
     <div class="posts-index-item">
       <div class="post-left">
@@ -13,6 +14,7 @@
       </div>
     </div>
     <% end %>
+    </table>
 
   </div>
 </div>
