--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,7 +10,7 @@
     </div>
     <div class="show-content">
     <p>
-      <strong>Content:</strong>
+      <!-- <strong>Content:</strong> -->
       <%= markdown(@post.content).html_safe %>
     </p>
     </div>
