--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require_self
  */
 
+
 /* reset ================================ */
 * {
     box-sizing: border-box;
@@ -31,28 +32,26 @@ ul, li {
 
 a {
     text-decoration: none;
-    color: gray;
 }
 
 h1, h2, h3, h4, h5, h6, p {
     margin: 0;
 }
 
-/* input { */
-/*   background-color: transparent; */
-/*   outline-width: 0; */
-/* } */
+input {
+  background-color: transparent;
+  outline-width: 0;
+}
 
-/* form input[type="submit"] { */
-/*   border: none; */
-/*   cursor: pointer; */
-/* } */
+form input[type="submit"] {
+  border: none;
+  cursor: pointer;
+}
 
-/* /\* 共通レイアウト ================================ *\/ */
+/* 共通レイアウト ================================ */
 body {
     color: #2d3133;
-    background-color: #ffffcc;
-    margin: 0;
+    background-color: white;
     min-height: 1vh;
 }
 
@@ -74,44 +73,40 @@ body {
     background-color: #f5f8fa;
 }
 
-/* ヘッダー  */
-header {
-    height: 100px;
-    width: 100%;
-    background-color: #66cc99;
-}
+/* /\* ヘッダー  *\/ */
+/* header { */
+/*     position: relative; */
+/*     height: 50px; */
+/*     width: 100%; */
+/*     background-color: #66cc99; */
+/* } */
 
-.header-logo {
-    float: left;
-    padding-left: 30%;
-    color: white;
-    font-size: 22px;
-    line-height: 100px;
-}
+/* .header-logo { */
+/*     position: absolute; */
+/*     top: 50%; */
+/*     transform: translateY(-50%); */
+/*     /\* -webkit-transform: translateY(-50%); *\/ */
+/*     /\* -ms-transform: translateY(-50%); *\/ */
+/*     float: left; */
+/*     padding-left: 30%; */
+/*     color: white; */
+/*     font-size: 22px; */
+/*     line-height: 100px; */
+/* } */
 
-.header-menus {
-    float: right;
-    padding-right: 20%;
-}
+/* .header-menus { */
+/*     position: absolute; */
+/*     top: 50%; */
+/*     left: 65%; */
+/*     transform: translate(-10%,-50%); */
+/*     float: right; */
+/*     padding-right: 20%; */
+/* } */
 
-.header-menus li {
-    float: left;
-    line-height: 100px;
-    font-size: 14px;
-    color: white;
-    padding-left: 15px;
-}
-
-/* フラッシュ */
-.flash {
-    padding: 10px 0;
-    color: white;
-    background: rgb(251, 170, 88);
-    text-align: center;
-    position: absolute;
-    top: 64px;
-    z-index: 10;
-    width: 100%;
-    border-radius: 0 0 2px 2px;
-    font-size: 14px;
-}
+/* .header-menus li { */
+/*     float: left; */
+/*     line-height: 100px; */
+/*     font-size: 14px; */
+/*     color: white; */
+/*     padding-left: 15px; */
+/* } */
