--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,24 +1,24 @@
 <div calss="main posts-edit">
   <div class="container">
 
-    <h1 class="form-heading">編集</h1>
-
-    <% if @error_message %>
-    <div class="form-error">
-      <%= @error_message %>
-    </div>
-    <% end %>
+    <h2 class="form-heading">編集</h2>
 
     <%= form_with(url: "/posts/#{@post.id}",method: :patch) do %>
     <div class="form">
       <div class="form-body">
-      <p>タイトル</p>
-      <input name="title" value="<%= @post.title %>">
-      <p>内容</p>
-      <textarea name="content"><%= @post.content %></textarea>
-      <p>コード</p>
-      <textarea name="code"><%= @post.code %></textarea>
-      <input type="submit" value="更新">
+        <div class="form-group">
+          <p>タイトル</p>
+          <input class="form-control" name="title" value="<%= @post.title %>">
+        </div>
+        <div class="form-group">
+          <p>内容</p>
+          <textarea class="form-control" name="content"><%= @post.content %></textarea>
+        </div>
+        <div class="form-group">
+          <p>コード</p>
+          <textarea class="form-control" name="code"><%= @post.code %></textarea>
+        </div>
+        <button type="submit" class="btn btn-info">更新</button>
       </div>
     </div>
     <% end %>
