--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,25 +1,24 @@
 <div calss="main posts-new">
   <div class="container">
 
-    <h1>新規投稿</h1>
-
-    <% if @error_message %>
-    <div class="form-error">
-      <%= @error_message %>
-    </div>
-    <% end %>
+    <h2 class="form-heading">新規投稿</h2>
 
     <%= form_with(url: "/posts") do %>
     <div class="form">
       <div class="form-body">
+        <div class="form-group">
         <p>タイトル</p>
-        <input name="title" value="<%= @post.title %>">
+        <input class="form-control" name="title" value="<%= @post.title %>">
+        </div>
+        <div class="form-group">
         <p>内容</p>
-        <textarea name="content" value="<%= @post.content %>"></textarea>
+        <textarea class="form-control" name="content" value="<%= @post.content %>"></textarea>
+        </div>
+        <div class="form-group">
         <p>コード</p>
-        <textarea name="code" value="<%= @post.code %>"></textarea>
-
-        <input type="submit" value="新規投稿">
+        <textarea class="form-control" name="code" value="<%= @post.code %>"></textarea>
+        </div>
+        <button type="submit" class="btn btn-info">新規投稿</button>
       </div>
     </div>
     <% end %>
