--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,36 +1,36 @@
 <div calss="main users-edit">
   <div class="container">
 
-    <h1 class="form-heading">編集</h1>
-
-    <% if @error_message %>
-    <div class="form-error">
-      <%= @error_message %>
-    </div>
-    <% end %>
+    <h2 class="form-heading">プロフィール編集</h2>
 
     <%= form_with(url: "/users/#{@user.id}",method: :patch) do %>
     <div class="form">
       <div class="form-body">
-        <p>ユーザー名</p>
-        <input name="name" value="<%= @user.name %>">
-        <p>メールアドレス</p>
-        <input name="email" value="<%= @user.email %>">
-        <p>パスワード</p>
-        <input name="password" type="password" value="<%= @user.password %>">
-        <p>画像</p>
-        <input name="image" type="file">
-        <input type="submit" value="更新">
-        <% if @current_user.admin %>
+        <div class="form-group">
+          <p>ユーザー名</p>
+          <input class="form-control" name="name" value="<%= @user.name %>">
+        </div>
+        <div class="form-group">
+          <p>メールアドレス</p>
+          <input class="form-control" name="email" value="<%= @user.email %>">
+        </div>
+        <div class="form-group">
+          <p>画像</p>
+          <input name="image" type="file">
+        </div>
+          <% if @current_user.admin %>
+        </div>
+        <div class="form-group">
         <p>管理者権限</p>
-        <select name="admin">
-          <option value="false">ユーザ</option>
-          <option value="true">管理者</option>
-        </select>
-        <% end %>
+          <select class="form-control" name="admin">
+            <option value="false">ユーザ</option>
+            <option value="true">管理者</option>
+          </select>
+        </div>
+          <% end %>
+          <button type="submit" class="btn btn-info">更新</button>
       </div>
     </div>
     <% end %>
-
   </div>
 </div>
