--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,15 @@
 <div calss="main users-index">
   <div class="container">
 
-    <h1>Users</h1>
+    <h1>ユーザ一覧</h1>
 
-    <table>
+    <table class="table">
       <div class="index-feader">
       <thead>
         <tr>
           <th>Name</th>
           <th>Email</th>
-          <th>Image name</th>
-          <th>Password_digest</th>
+          <th>admin</th>
           <th colspan="3"></th>
         </tr>
       </thead>
@@ -21,8 +20,6 @@
         <tr>
           <td><%= user.name %></td>
           <td><%= user.email %></td>
-          <td><%= user.image_name %></td>
-          <td><%= user.password_digest %></td>
           <td><%= user.admin %></td>
 
           <td><%= link_to 'Show', user %></td>
