--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -1,21 +1,20 @@
 <div class="main users-login">
   <div class="container">
 
-    <div class="form-heading">ログイン</div>
+    <h2 class="form-heading">ログイン</h2>
     <div class="form users-form">
       <div class="form-body">
-        <% if @error_message %>
-          <div class="form-error">
-            <%= @error_message %>
-          </div>
-        <% end %>
 
         <%= form_tag("/login") do %>
-          <p>メールアドレス</p>
-          <input name="email" value="<%= @email %>">
-          <p>パスワード</p>
-          <input type="password" name="password" value="<%= @password %>">
-          <input type="submit" value="ログイン">
+        <div class="form-group">
+        <p>メールアドレス</p>
+        <input class="form-control" name="email" value="<%= @email %>">
+        </div>
+        <div class="form-group">
+        <p>パスワード</p>
+        <input class="form-control" type="password" name="password" value="<%= @password %>">
+        </div>
+        <button type="submit" class="btn btn-info">ログイン</button>
         <% end %>
       </div>
     </div>
