--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,15 +13,17 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-xl navbar-dark bg-dark mb-3">
+    <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
       <div class="container-fluid">
         <div class="navbar-header">
+          <div class="navbar-nav mr-auto">
           <% if @current_user %>
           <a class="navbar-brand" href="/posts">Algorithms</a>
           <% else %>
           <a class="navbar-brand" href="/">Algorithms</a>
           <% end %>
-
+          </div>
+          <div class="navbar-right">
             <button class="navbar-toggler collapsed"
                     type="button"
                     data-toggle="collapse"
@@ -32,13 +34,13 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navmenu1">
-              <div class="navbar-nav">
+              <div class="navbar-nav pull-right nav-pills">
                 <a class="nav-item nav-link" href="/posts">投稿一覧</a>
                 <% if @current_user %>
                 <% if @current_user.admin%>
                 <a class="nav-item nav-link" href="/users"><%= @current_user.name %></a>
                 <% else %>
-                <a class="nav-item nav-link" href="/users/#{@current_user.id}"><%= @current_user.name %></a>
+                <a class="nav-item nav-link" href="/users/<%= @current_user.id %>"><%= @current_user.name %></a>
                 <% end %>
                 <a class="nav-item nav-link" href="/posts/new">新規投稿</a>
                 <a class="nav-item nav-link" href="/logout" data-method="post">ログアウト</a>
@@ -46,7 +48,8 @@
                 <a class="nav-item nav-link" href="/users/new">新規登録</a>
                 <a class="nav-item nav-link" href="/login">ログイン</a>
                 <% end %>
-            </div>
+              </div>
+              </div>
           </div>
         </div>
       </div>
