--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,6 +15,13 @@
               <p><%= @post.updated_at %></p>
             </div>
           </div>
+          <% if @current_user %>
+          <% if Bookmark.find_by(user_id: @current_user.id, post_id: @post.id) %>
+          <a class="btn btn-secondary" href="/bookmarks/<%= @post.id %>/destroy" data-method="post" role="button">Bookmark</a>
+          <% else %>
+          <a class="btn btn-primary" href="/bookmarks/<%= @post.id %>/create" data-method="post" role="button">Bookmark</a>
+          <% end %>
+          <% end %>
         </div>
       </table>
       <h3 class="p-0"><strong><%= @post.title %></strong></h3>
