--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -32,6 +32,7 @@
 
     <br>
 
-    <%= link_to 'New User', new_user_path %>
+    <button type="submit" class="btn btn-info" onclick="location.href='<%=new_user_path%>'">New User</button>
+
   </div>
 </div>
