--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,6 +16,13 @@
             <%= post.updated_at %>
           </h6>
         </div>
+        <div class="m-2">
+          <% post.tag_list.each do |tag| %>
+          <%= link_to posts_path(tag_name: tag) do %>
+          <span class="badge badge-primary mr-1 p-2"><%= tag %></span>
+          <% end %>
+          <% end %>
+        </div>
       </div>
     </div>
     <% end %>
