--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -18,6 +18,10 @@
         <p>コード</p>
         <textarea class="form-control" name="code" value="<%= @post.code %>"></textarea>
         </div>
+        <div class="form-group">
+        <p>タグ</p>
+        <input class="form-control" name="tag_list" value="<%= @post.tag_list.join(',') %>"></input>
+        </div>
         <button type="submit" class="btn btn-info">新規投稿</button>
       </div>
     </div>
