--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,14 +14,23 @@
               <p><%= link_to user.name, user %></p>
               <p><%= @post.updated_at %></p>
             </div>
+            <div class="mr-3">
+              <% @post.tag_list.each do |tag| %>
+              <%= link_to posts_path(tag_name: tag) do %>
+              <span class="badge badge-primary mr-1 p-2"><%= tag %></span>
+              <% end %>
+              <% end %>
+            </div>
+            <div class="float-right m-auto">
+              <% if @current_user %>
+              <% if Bookmark.find_by(user_id: @current_user.id, post_id: @post.id) %>
+              <a class="fas fa-bookmark fa-3x" href="/bookmarks/<%= @post.id %>/destroy" data-method="post"></a>
+              <% else %>
+              <a class="far fa-bookmark fa-3x"  href="/bookmarks/<%= @post.id %>/create" data-method="post"></a>
+              <% end %>
+              <% end %>
+            </div>
           </div>
-          <% if @current_user %>
-          <% if Bookmark.find_by(user_id: @current_user.id, post_id: @post.id) %>
-          <a class="btn btn-secondary" href="/bookmarks/<%= @post.id %>/destroy" data-method="post" role="button">Bookmark</a>
-          <% else %>
-          <a class="btn btn-primary" href="/bookmarks/<%= @post.id %>/create" data-method="post" role="button">Bookmark</a>
-          <% end %>
-          <% end %>
         </div>
       </table>
       <h3 class="p-0"><strong><%= @post.title %></strong></h3>
@@ -42,9 +51,9 @@
 
     <% if @current_user && (@current_user.id == @post.user_id || @current_user.admin) %>
     <ul class="list-group list-group-horizontal-md pull-left">
-      <li class="list-group-item"><%= link_to 'Edit', edit_post_path(@post) %></td>
-      <li class="list-group-item"><%= link_to 'Destroy', @post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    </div>
+      <li class="list-group-item"><%= link_to 'Edit', edit_post_path(@post) %></li>
+      <li class="list-group-item"><%= link_to 'Destroy', @post, method: :delete, data: { confirm: 'Are you sure?' } %></li>
+    </ul>
     <% end %>
   </div>
 </div>
